<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_text_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:textAppearanceMedium"
                android:hint="Name"
                android:inputType="textCapWords"/>

            <TextView
                android:text="@string/toppings"
                style="@style/HeaderTextStyle"/>


                <CheckBox
                    android:id="@+id/addWhippedCream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:paddingLeft="24dp"
                    android:text="@string/whipped_cream"
                    android:textAppearance="?android:textAppearanceMedium" />
                <CheckBox
                    android:id="@+id/addChocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:paddingLeft="24dp"
                    android:text="@string/chocolate"
                    android:textAppearance="?android:textAppearanceMedium" />



            <TextView
                android:text="@string/quantity"
                style="@style/HeaderTextStyle"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="decrement"
                    android:text="-"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="1"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="increment"
                    android:text="+"
                    android:textSize="16sp" />

            </LinearLayout>


            <Button
                android:id="@+id/orderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>